re PR middle-end/39573 (Linking fails on AMD with -march=native and -fopenmp, works with generic x86_64)

PR middle-end/39573
	* omp-low.c (expand_omp_taskreg): Finalize taskreg static local_decls
	variables.

	* libgomp.c++/pr39573.C: New test.

From-SVN: r145772